[package]
name = "rust-gl-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"
glam = "0.20.5"
tobj = "3.2.2"
imgui = "0.8.2"
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"

[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "cube"
path = "src/cube.rs"

[[bin]]
name = "model-display"
path = "src/model-display.rs"

[[bin]]
name = "vsynth"
path = "src/vsynth.rs"